Add direct Xaero integration, PRBM parsing overhaul, and dev docs